Parti hero avec css et js

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 <main>
 
   <!-- HERO -->
-  <section class="hero">
-    <img src="/assets/img/Sofia.webp" alt="Portrait de Sofia Kovalevskaïa" class="hero__image">
+<section class="hero">
+  <img src="/assets/img/Sofia.webp" alt="Portrait de Sofia Kovalevskaïa" class="hero__image">
 
-    <div class="hero__dialogue">
-      <img src="img/banners/Frame-dialogue.png" alt="" class="hero__frame">
-      <p class="hero__text" id="heroText"></p>
-    </div>
-  </section>
+  <div class="hero__dialogue">
+    <img src="/assets/banners/Frame-dialogue.svg" alt="" class="hero__frame">
+    <p class="hero__text" id="heroText"></p>
+  </div>
+</section>
 
   <!-- ABOUT -->
   <section class="about">
     <h2 class="about__name">Sofia Kovalevskaïa</h2>
     <p class="about__subtitle">Mathématicienne, pionnière</p>
 
-    <img src="img/icons/ligne.png" alt="" class="about__divider">
+    <img src="/assets/icons/ligne.svg" alt="" class="about__divider">
 
     <button class="about__button">
       <span class="about__button-text">Découvrir son histoire</span>
@@ -85,7 +85,7 @@
   <section class="timeline">
 
     <article class="timeline__item">
-      <img src="img/images/Ada.png" alt="Ada Lovelace" class="timeline__image">
+      <img src="/assets/img/ada.webp" alt="Ada Lovelace" class="timeline__image">
       <h3 class="timeline__name">Ada Lovelace</h3>
       <p class="timeline__era">XIXe siècle</p>
 
@@ -127,6 +127,6 @@
 
 
 
-<script src="js/main.js"></script>
+<script src="/src/js/main.js"></script>
 </body>
 </html>
