Finish carousel section and page films

--- a/fr/films-videos-fr.html
+++ b/fr/films-videos-fr.html
@@ -306,6 +306,94 @@
 
 
 
+<section class="videos-intro">
+
+  <!-- Line + title + intro -->
+  <div class="videos-intro__divider">
+    <img src="/assets/icons/ligne.svg" alt="divider line">
+  </div>
+
+  <h2 class="videos-intro__title">
+    Vidéos à découvrir<br>sur YouTube
+  </h2>
+
+  <p class="videos-intro__text">
+    Ces vidéos offrent une approche plus libre et émotionnelle du thème.
+  </p>
+
+</section>
+
+
+
+
+
+<section class="video-carousel">
+
+  <div class="video-carousel__viewport">
+    <div class="video-carousel__track">
+
+      <!-- Video 1 -->
+      <div class="video-card">
+        <div class="video-frame" data-src="https://www.youtube.com/embed/BDFPSpwP83s">
+          <img src="https://img.youtube.com/vi/BDFPSpwP83s/hqdefault.jpg" alt="Vidéo 1">
+        </div>
+        <div class="video-title">Les découvertes oubliées des femmes 
+          scientifiques, ou l'effet Matilda</div>
+      </div>
+
+      <!-- Video 2 -->
+      <div class="video-card">
+        <div class="video-frame" data-src="https://www.youtube.com/embed/fGiyCl8aZW0">
+          <img src="https://img.youtube.com/vi/fGiyCl8aZW0/hqdefault.jpg" alt="Vidéo 2">
+        </div>
+        <div class="video-title">NO MORE MATILDAS (English Version)</div>
+      </div>
+
+      <!-- Central Video -->
+      <div class="video-card is-active">
+        <div class="video-frame" data-src="https://www.youtube.com/embed/4DhiyhVF8Ok">
+          <img src="https://img.youtube.com/vi/4DhiyhVF8Ok/hqdefault.jpg" alt="Vidéo centrale">
+        </div>
+        <div class="video-title">This GENIUS Needed a FAKE MARRIAGE… 
+          to Study Mathematics #mathhistory</div>
+      </div>
+
+      <!-- Video 4 -->
+      <div class="video-card">
+        <div class="video-frame" data-src="https://www.youtube.com/embed/nevy-vuaAdI">
+          <img src="https://img.youtube.com/vi/nevy-vuaAdI/hqdefault.jpg" alt="Vidéo 4">
+        </div>
+        <div class="video-title">Sofya Kovalevskaya (1956) — Russian drama 
+          film  (auto-translated subtitles available)</div>
+      </div>
+
+      <!-- Video 5 -->
+      <div class="video-card">
+        <div class="video-frame" data-src="https://www.youtube.com/embed/3-SBwlUfX_8">
+          <img src="https://img.youtube.com/vi/3-SBwlUfX_8/hqdefault.jpg" alt="Vidéo 5">
+        </div>
+        <div class="video-title">Sophie Germain : génie oubliée des maths</div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="video-carousel__controls">
+    <button class="carousel-btn prev">
+      <img src="/assets/icons/expand.svg" alt="Prev">
+    </button>
+    <button class="carousel-btn next">
+      <img src="/assets/icons/expand.svg" alt="Next">
+    </button>
+  </div>
+
+</section>
+
+
+
+
+
+
 
     </main>
 
