--- a/en/index-en.html
+++ b/en/index-en.html
@@ -301,11 +301,12 @@
     <img src="/assets/icons/etoile.svg" class="star star--small" alt="">
   </div>
 
-  <button class="stars-btn">
-    <img src="/assets/banners/Frame-bouton.svg" alt="button frame" class="stars-btn-bg">
+  <a href="/en/articles.html" class="stars-btn">
+    <img src="/assets/banners/Frame-bouton.svg" alt="" class="stars-btn-bg">
     <span class="stars-btn-text">Discover the articles</span>
-  </button>
+  </a>
 </section>
+
 
 
 
