--- a/en/radioactive-en.html
+++ b/en/radioactive-en.html
@@ -24,7 +24,7 @@
     
 <header class="header">
   <div class="header__inner">
-      <a href="/fr/index.html" class="header__logo-link">
+      <a href="/en/index-en.html" class="header__logo-link">
          <img src="/assets/img/logo.svg" alt="logo" class="header__logo">
     </a>
 
@@ -45,10 +45,10 @@
 
   <!-- LANG + CLOSE -->
   <div class="menu__top">
-     <div class="menu__lang">
-     <a href="/fr/sofia-kovalevskaia.html" class="menu__lang-btn is-active">FR</a>
-     <a href="/en/sofia-kovalevskaya.html" class="menu__lang-btn">EN</a>
-  </div>
+<div class="menu__lang">
+  <a href="/fr/radioactive.html" class="menu__lang-btn">FR</a>
+  <a href="/en/radioactive-en.html" class="menu__lang-btn is-active">EN</a>
+</div>
 
 
     <button class="menu__close" id="closeMenuBtn">
@@ -61,25 +61,25 @@
 
   <!-- NAV -->
 <nav class="menu__nav">
-  <a class="menu__item" href="/fr/index.html">Accueil</a>
+  <a class="menu__item" href="/en/index-en.html">Home</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/about-fr.html">À propos</a>
+  <a class="menu__item" href="/en/about.html">About</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/sofia-kovalevskaia.html">Sofia Kovalevskaïa</a>
+  <a class="menu__item" href="/en/sofia-kovalevskaya.html">Sofia Kovalevskaya</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/articles-fr.html">Articles</a>
+  <a class="menu__item" href="/en/articles.html">Articles</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/films-videos-fr.html">Films & Vidéos</a>
+  <a class="menu__item" href="/en/films-videos.html">Films & Videos</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/autres-projets.html">Autres projets</a>
+  <a class="menu__item" href="/en/other-projects.html">Other projects</a>
   <span class="menu__divider"></span>
 
-  <a class="menu__item" href="/fr/contact-fr.html">Contact</a>
+  <a class="menu__item" href="/en/contact.html">Contact</a>
 </nav>
 
 
@@ -91,15 +91,6 @@
 
 
 <main>
-
- <h1 class="page-title">
-    Sofia Kovalevskaïa,<br> pionnière oubliée
-  </h1>
-
-
-
-
-
 
 
 
@@ -113,11 +104,11 @@
     <img src="/assets/icons/mail.svg" alt="" class="footer__mail">
 
     <p class="footer__text footer__text--line1">
-      Un projet visuel autour de la mémoire des femmes scientifiques
+      A visual project about the memory of women in science
     </p>
 
     <p class="footer__text footer__text--line2">
-      Projet réalisé en 2025 —
+      Project created in 2025 —
       <a class="footer__link"
          href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/"
          target="_blank">
@@ -130,6 +121,6 @@
 
 
 
-<script src="/src/js/main.js"></script>
+<script src="/src/js/main-en.js"></script>
 </body>
 </html>
