--- a/fr/article-1.html
+++ b/fr/article-1.html
@@ -92,6 +92,86 @@
 
 <main>
 
+<article class="article">
+
+   <h1 class="page-title">
+    Sofia Kovalevskaïa : Des mathématiques qui ont brisé les barrières
+  </h1>
+
+  <!-- Metadata -->
+  <p class="article__meta">Date de publication : 15 janvier 2025</p>
+  <p class="article__meta article__meta--small">Lecture : ~3–4 minutes</p>
+
+  <!-- Image -->
+  <div class="article-card__image">
+    <img src="/assets/img/Sofia-art1.webp" alt="Sofia Kovalevskaïa">
+  </div>
+
+  <!-- Intro card -->
+  <div class="article__intro-card">
+    <p class="article__intro-text">
+      Première femme docteure en mathématiques, Sofia Kovalevskaïa a consacré sa vie à la science, malgré les obstacles de son époque.
+    </p>
+  </div>
+
+  <!-- Main content -->
+  <section class="article__content">
+
+    <p class="article__subtitle">1849 – Une enfance hors du commun</p>
+    <p>
+      Née à Moscou dans une famille aristocratique, Sofia Kovalevskaïa grandit dans un monde où les femmes étaient destinées au silence. Pourtant, dès l’enfance, elle se passionne pour les sciences.
+    </p>
+    <p>
+      Son grand-père, astronome, lui transmet l’amour des mathématiques, tandis que sa famille polonaise lui lègue un goût profond de liberté.
+      Privée d’accès aux universités russes, elle étudie seule, lisant les notes de cours que son père utilisait pour tapisser sa chambre — un symbole d’apprentissage obstiné.
+    </p>
+
+    <p class="article__subtitle">1868 – Le mariage pour apprendre</p>
+    <p>
+      À dix-neuf ans, Sofia conclut un mariage fictif avec Vladimir Kovalevski, un jeune scientifique. Ce mariage lui ouvre les portes de l’Europe.
+    </p>
+    <p>
+      Elle part d’abord à Heidelberg, puis à Berlin, où elle étudie sous la direction de Carl Weierstrass. En 1874, elle soutient une thèse remarquable et devient la première femme docteure en mathématiques en Europe.
+    </p>
+
+    <p class="article__subtitle">1878–1884 – Entre luttes et reconnaissance</p>
+    <p>
+      Après des années de refus en Russie, Sofia accepte un poste à l’Université de Stockholm — une première pour une femme dans une institution européenne.
+    </p>
+
+    <p class="article__subtitle">1889 – Héritage d’une pionnière</p>
+    <p>
+      Appréciée pour son intelligence autant que pour sa sensibilité, Sofia devient un symbole : la « princesse des mathématiques ».
+      Elle écrit aussi des récits et des pièces de théâtre, mêlant science et poésie.
+    </p>
+
+  </section>
+
+  <!-- Citation -->
+  <div class="article__quote-card">
+    <p class="article__quote-text">
+      « <span class="article__quote-highlight">Chaque fois que je retourne en Russie, j’ai l’impression de sortir de prison,</span> » confie-t-elle un jour.
+    </p>
+  </div>
+
+  <!-- Conclusion -->
+  <section class="article__content article__content--end">
+    <p>
+      Elle rêve de servir la science de son pays, mais les portes lui restent closes. En 1889, elle est enfin reconnue membre correspondant de l’Académie russe des sciences — un honneur sans salaire.
+    </p>
+    <p>
+      Quelques mois plus tard, Sofia meurt à 41 ans, laissant derrière elle une œuvre scientifique et littéraire qui inspire encore aujourd’hui.
+    </p>
+  </section>
+
+  <!-- Button -->
+  <div class="article__button-wrapper">
+    <a href="/les-sources.html" class="article__button">
+      Voir les sources
+    </a>
+  </div>
+
+</article>
 
 
 
