--- a/fr/articles-fr.html
+++ b/fr/articles-fr.html
@@ -92,7 +92,9 @@
 
 <main>
 
- <h1 class="articles-page__title">Articles</h1>
+ <h1 class="page-title">
+    Articles
+  </h1>
 
 <!-- Article 1 -->
 <section class="articles-page">
@@ -233,7 +235,8 @@
 
 
 
-
+<section class="videos-section section--end">
+</section>
 
 
     </main>
