--- a/en/films-videos.html
+++ b/en/films-videos.html
@@ -92,7 +92,7 @@
 
 <main class="page-films">
 
-  <h1 class="page-films__title">
+  <h1 class="page-title">
     Filmed Memory
   </h1>
 
@@ -149,7 +149,11 @@
     </div>
 
     <div class="film-card__info">
-      <h2 class="film-card__title">Radioactive</h2>
+      <h2 class="film-card__title">
+             <a href="/fr/Radioactive-en.html" class="film-card__link">
+                Radioactive
+             </a>
+      </h2>
 
       <div class="film-card__tags-container">
         <div class="film-card__tags-row">
@@ -191,7 +195,11 @@
     </div>
 
     <div class="film-card__info">
-      <h2 class="film-card__title">Hidden Figures</h2>
+      <h2 class="film-card__title">
+             <a href="/fr/Hidden Figures.html" class="film-card__link">
+                Hidden Figures
+             </a>
+      </h2>
 
       <div class="film-card__tags-container">
         <div class="film-card__tags-row">
@@ -235,7 +243,12 @@
     </div>
 
     <div class="film-card__info">
-      <h2 class="film-card__title">Agora</h2>
+      <h2 class="film-card__title">
+             <a href="/fr/agora.html" class="film-card__link">
+                Agora
+             </a>
+      </h2>
+
 
       <div class="film-card__tags-container">
         <div class="film-card__tags-row">
@@ -281,7 +294,12 @@
     </div>
 
     <div class="film-card__info">
-      <h2 class="film-card__title">Sofya Kovalevskaya</h2>
+      <h2 class="film-card__title">
+             <a href="/fr/sofya-kovalevskaya-film-en.html" class="film-card__link">
+                Sofya Kovalevskaya
+             </a>
+      </h2>
+
 
       <div class="film-card__tags-container">
         <div class="film-card__tags-row">
