--- a/fr/contact-fr.html
+++ b/fr/contact-fr.html
@@ -92,7 +92,57 @@
 
 <main>
 
+ <h1 class="page-title">
+    Contactez-nous
+  </h1>
 
+  <section class="contact">
+
+  <p class="contact__intro">
+    Vous souhaitez en savoir plus sur le projet ou partager une idée ?
+    Écrivez-nous, votre message sera lu avec attention.
+  </p>
+
+  <form class="contact-form"
+        action="mailto:contact.effetdetilde@gmail.com"
+        method="post"
+        enctype="text/plain"
+        autocomplete="on">
+
+    <div class="contact-form__field">
+      <label for="name">Nom*</label>
+      <input type="text" id="name" name="name" placeholder="Exemple : Marie" required>
+    </div>
+
+    <div class="contact-form__field">
+      <label for="email">Email*</label>
+      <input type="email" id="email" name="email"
+             placeholder="exemple@effetdetilde.fr" required>
+    </div>
+
+    <div class="contact-form__field">
+      <label for="phone">Téléphone</label>
+      <input type="tel" id="phone" name="phone"
+             placeholder="+33 6 12 34 56 78">
+    </div>
+
+
+
+
+    <div class="contact-form__field contact-form__field--message">
+      <textarea id="message" name="message"
+            placeholder="Votre message…"
+            required></textarea>
+    </div>
+
+
+    <button type="submit" class="contact-form__submit">
+      Envoyer
+    </button>
+
+  </form>
+
+</section>
 
 
 
