add page other page + correction

--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -101,6 +101,58 @@
   </p>
 
 
+  <section class="other-projects">
+
+  <div class="other-projects__inner">
+
+    <a class="project-card" aria-label="Fissionaire project">
+      <div class="project-card__image">
+        <img src="/assets/img/fissionaire.webp" alt="Fissionaire – Lise Meitner">
+      </div>
+      <p class="project-card__title">Fissionaire<br>Lise Meitner</p>
+    </a>
+
+    <a class="project-card" aria-label="Nettie Stevens project">
+      <div class="project-card__image">
+        <img src="/assets/img/nettie-stevens.webp" alt="Nettie Stevens">
+      </div>
+      <p class="project-card__title">Nettie Stevens</p>
+    </a>
+
+    <a class="project-card" aria-label="Mileva Einstein project">
+      <div class="project-card__image">
+        <img src="/assets/img/mileva-einstein.webp" alt="Mileva Einstein">
+      </div>
+      <p class="project-card__title">Mileva Einstein</p>
+    </a>
+
+    <a class="project-card" aria-label="Hidden Voices project">
+      <div class="project-card__image">
+        <img src="/assets/img/hidden-voices.webp" alt="Hidden Voices">
+      </div>
+      <p class="project-card__title">Hidden Voices</p>
+    </a>
+
+    <a class="project-card" aria-label="Matilda Effect project">
+      <div class="project-card__image">
+        <img src="/assets/img/matilda-effect.webp" alt="Lise Meitner and the Matilda Effect">
+      </div>
+      <p class="project-card__title">Lise Meitner &<br>l’Effet Matilda</p>
+    </a>
+
+    <a class="project-card" aria-label="Alice Ball project">
+      <div class="project-card__image">
+        <img src="/assets/img/alice-ball.webp" alt="Alice Ball">
+      </div>
+      <p class="project-card__title">Alice Ball</p>
+    </a>
+
+  </div>
+
+</section>
+
+
+
 
 
 
