Add page about - html + css

--- a/en/about.html
+++ b/en/about.html
@@ -92,12 +92,63 @@
 
 <main>
 
+<h1 class="page-title">About</h1>
+
+<article class="article">
+
+  <section class="article__content">
+    <p>
+      Discovering a forgotten voice: Sofia Kovalevskaya — science, struggle, legacy.
+    </p>
+  </section>
+
+  <div class="article__intro-card">
+    <p class="article__intro-text">
+      Project created by Ruslana Budniak.
+      Student project (MMi) — a visual and textual exploration of the Matilda Effect 
+      through the life of Sofia Kovalevskaya.
+    </p>
+  </div>
+
+  <section class="article__content">
+    <p>
+      This website is a university project born from a fascination with the remarkable 
+      path of Sofia Kovalevskaya — mathematician, writer, and pioneer.
+    </p>
+
+    <p>
+      The goal: to tell her story while questioning the phenomenon of the erasure 
+      of women scientists (the Matilda Effect) — not by building a catalogue of archives, 
+      but by creating an experience that blends narrative, documents, and interactivity.
+    </p>
+
+    <p>
+      The site doesn’t just tell her story — it lets her speak. <br>
+      I wanted users to feel Sophie’s voice as if she were addressing them directly. <br>
+      This approach felt more vivid, more human, more true.
+    </p>
+
+    <p>
+      This project is meant to be both educational (sources, bibliography) 
+      and sensory (atmosphere, interaction). <br>
+      It was created within the MMi department, with the aim of shedding 
+      light on what history has sometimes left in the shadows.
+    </p>
+  </section>
+
+  <section class="about-media">
+    <a href="#" class="about-media__button" aria-disabled="true">
+      View BU item
+    </a>
+
+    <div class="about-media__image">
+      <img src="/assets/img/Sofia-art5.webp" alt="Illustration de Sofia Kovalevskaïa">
+    </div>
+  </section>
+
+</article>
 
 
-
-
-
-    
     </main>
 
 <footer class="footer">
