--- a/fr/about-fr.html
+++ b/fr/about-fr.html
@@ -91,16 +91,62 @@
 
 
 <main>
+<h1 class="page-title">À propos</h1>
 
- <h1 class="page-title">
-    À propos
-  </h1>
+<article class="article">
 
+  <section class="article__content">
+    <p>
+      Découvrir une voix oubliée : <br>
+      Sofia Kovalevskaïa — science, lutte, héritage.
+    </p>
+  </section>
 
+  <div class="article__intro-card">
+    <p class="article__intro-text">
+      Créatrice du projet — Ruslana Budniak. Projet étudiant MMi — une exploration visuelle 
+      et textuelle de l’« Effet Matilda » à travers la vie de Sofia Kovalevskaïa.
+    </p>
+  </div>
 
+  <section class="article__content">
+    <p>
+      Ce site est un projet universitaire né d’une fascination pour 
+      la trajectoire singulière de Sofia Kovalevskaïa — mathématicienne, 
+      écrivaine et pionnière des sciences.
+    </p>
 
+    <p>
+      L’objectif : raconter son parcours et, par la même occasion, interroger 
+      le phénomène d’effacement des femmes scientifiques (« l’Effet Matilda ») — sans 
+      faire un catalogue d’archives, mais en proposant une expérience qui combine récit, 
+      documents et interactivité.
+    </p>
 
+    <p>
+      Le site ne raconte pas seulement son histoire — il la fait parler. <br>
+      J’ai voulu que l’utilisateur ressente la voix de Sofia elle-même, comme si elle s’adressait à lui. <br>
+      Ce choix m’a semblé plus vivant, plus humain, plus vrai.
+    </p>
 
+    <p>
+      Ce projet se veut à la fois pédagogique (sources, bibliographie) et sensitif 
+      (ambiance, interaction). Il est réalisé dans le cadre du département MMi — et vise 
+      à rendre visible ce que l’histoire a parfois laissé dans l’ombre.
+    </p>
+  </section>
+
+  <section class="about-media">
+    <a href="#" class="about-media__button" aria-disabled="true">
+      Voir l’objet BU
+    </a>
+
+    <div class="about-media__image">
+      <img src="/assets/img/Sofia-art5.webp" alt="Illustration de Sofia Kovalevskaïa">
+    </div>
+  </section>
+
+</article>
 
 
     </main>
