Add page sofia-covalevskaia - html + css

--- a/en/other-projects.html
+++ b/en/other-projects.html
@@ -93,11 +93,11 @@
 <main>
 
  <h1 class="page-title">
-    Autres projets
+    Other Projects
   </h1>
 
   <p class="contact__intro">
-    Hommage aux femmes effacées de l’histoire.
+    A tribute to the women erased from history.
   </p>
 
 
