--- a/en/sofia-kovalevskaya.html
+++ b/en/sofia-kovalevskaya.html
@@ -93,13 +93,77 @@
 <main>
 
  <h1 class="page-title">
-    Articles
+    Sofia Kovalevskaya — <br> a forgotten pioneer
   </h1>
 
+    <article class="article-card">
+      <div class="article-card__image">
+        <img src="/assets/img/sofia-page-sofia.webp" alt="Sofia Kovalevskaïa">
+        <div class="article-card__overlay">
+        </div>
+      </div>
+  
+    <section class="article__content">
 
+    <p class="article__subtitle">A woman ahead of her time</p>
+    <p>
+      She was not yet thirty when she solved equations that even the 
+      greatest scientists deemed impossible. <br>
+      But in those days, it wasn’t the result 
+      that shocked people most — it was the fact that it came from a woman.
+    </p>
+    </section>
 
+      <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
 
+          <section class="article__content">
+
+       <p>
+      “The Matilda Effect” refers to the systematic erasure of women from the history of science.
+      Long before the term existed, Sofia was already a victim of it.
+      Her work was first attributed to male colleagues, her discoveries downplayed, 
+      her efforts reduced to the “assistance” of a professor.
+    </p>
+    </section>
+
+          <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
     
+    <section class="article__content">
+
+    <p class="article__subtitle">The price of genius</p>
+    <p>
+      To prove she was worthy, she had to leave her country, marry without love, 
+      and face contempt and loneliness.
+      Behind the differential equations was a silent struggle — that of 
+      a woman who refused to be a man’s “appendage.”
+    </p>
+    </section>
+
+      <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
+
+    <section class="article__content">
+
+    <p class="article__subtitle">Legacy</p>
+    <p>
+      Even today, Sofia’s story echoes that of many other women researchers.
+      Their names fade away, their discoveries survive — anonymously.
+      But every time we speak of the Matilda Effect, somewhere, Sofia’s voice is heard again.
+    </p>
+    </section>
+   <p class="sofia__meta">Text inspired by public documents on Sofia Kovalevskaya</p>
+
+
+    <section class="discover-section">
+        <a href="articles.html" class="discover-button">
+            <span class="discover-button__text">
+                  Discover other forgotten women of science
+            </span>
+        </a>
+    </section>
+
+
+
+
     </main>
 
 <footer class="footer">
