--- a/fr/sofia-kovalevskaia.html
+++ b/fr/sofia-kovalevskaia.html
@@ -93,8 +93,74 @@
 <main>
 
  <h1 class="page-title">
-    Sofia Kovalevskaïa,<br> pionnière oubliée
+    Sofia Kovalevskaïa, <br> pionnière oubliée
   </h1>
+
+    <article class="article-card">
+      <div class="article-card__image">
+        <img src="/assets/img/sofia-page-sofia.webp" alt="Sofia Kovalevskaïa">
+        <div class="article-card__overlay">
+        </div>
+      </div>
+  
+    <section class="article__content">
+
+    <p class="article__subtitle">Une femme en avance sur son siècle</p>
+    <p>
+      Elle n’avait pas encore trente ans lorsqu’elle résolut des équations que même 
+      les plus grands savants jugeaient impossibles. Mais à cette époque, ce n’était pas 
+      le résultat qui étonnait le plus — c’était le fait qu’il provenait d’une femme.
+    </p>
+    </section>
+
+      <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
+
+          <section class="article__content">
+                <p class="article__subtitle">L’effet Matilda avant l’heure</p>
+       <p>
+      “Effet Matilda” — c’est le nom donné à l’effacement systématique des femmes 
+      dans l’histoire de la science. Bien avant que ce terme existe, Sofia 
+      en était déjà victime. Ses travaux furent d’abord attribués à ses collègues 
+      masculins, ses découvertes minimisées, ses efforts ramenés à “l’aide” d’un professeur.
+    </p>
+    </section>
+
+          <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
+    
+    <section class="article__content">
+
+    <p class="article__subtitle">Le prix du génie</p>
+    <p>
+      Pour prouver qu’elle en était digne, elle dut quitter son pays, se marier sans amour, 
+      affronter le mépris et la solitude.
+      Derrière les équations différentielles, il y avait une lutte silencieuse — 
+      celle d’une femme qui refusait d’être un “appendice” d’un homme.
+    </p>
+    </section>
+
+      <img src="/assets/icons/ligne.svg" alt="" class="sofia__divider">
+
+    <section class="article__content">
+
+    <p class="article__subtitle">Héritage</p>
+    <p>
+       Aujourd’hui encore, l’histoire de Sofia résonne avec celle de tant d’autres chercheuses.
+       Leurs noms s’effacent, leurs découvertes survivent — anonymes.
+       Mais chaque fois que l’on parle d’“effet Matilda”, quelque part, Sofia reprend la parole.
+    </p>
+    </section>
+   <p class="sofia__meta">Texte inspiré de documents publics sur Sofia Kovalevskaïa</p>
+
+
+    <section class="discover-section">
+        <a href="articles.html" class="discover-button">
+            <span class="discover-button__text">
+                  Découvrir d’autres femmes oubliées de la science
+            </span>
+        </a>
+    </section>
+
+
 
 
 
