--- a/en/article-2-en.html
+++ b/en/article-2-en.html
@@ -46,7 +46,7 @@
   <!-- LANG + CLOSE -->
   <div class="menu__top">
 <div class="menu__lang">
-  <a href="/fr/article-2-fr.html" class="menu__lang-btn">FR</a>
+  <a href="/fr/article-2.html" class="menu__lang-btn">FR</a>
   <a href="/en/article-2-en.html" class="menu__lang-btn is-active">EN</a>
 </div>
 
