--- a/en/films-videos.html
+++ b/en/films-videos.html
@@ -295,7 +295,7 @@
 
     <div class="film-card__info">
       <h2 class="film-card__title">
-             <a href="/fr/sofya-kovalevskaya-film-en.html" class="film-card__link">
+             <a href="/en/film-sofia-en.html" class="film-card__link">
                 Sofya Kovalevskaya
              </a>
       </h2>
